[MODIFY] se realizan modificaciones en la vista de menu, liquidacion y se comienza con el diseño de la vista de empleado

--- a/app/src/main/res/layout/activity_empleado.xml
+++ b/app/src/main/res/layout/activity_empleado.xml
@@ -20,7 +20,8 @@
         app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.046" />
+        app:layout_constraintVertical_bias="0.046"
+        tools:ignore="SpUsage,TextSizeCheck" />
 
     <ImageButton
         android:id="@+id/imageButtonMenu"
@@ -32,5 +33,86 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.026"
-        app:srcCompat="@drawable/iconmenu" />
+        app:srcCompat="@drawable/iconmenu"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/GuardarEmpleado"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:backgroundTint="#4CAF50"
+        android:text="@string/button_guardar_empleado"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.942"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.934"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/CancelarEmpleado"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:backgroundTint="#F44336"
+        android:text="@string/button_cancelar_empleado"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.550"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.934"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/EditarEmpleado"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:backgroundTint="#2196F3"
+        android:text="@string/button_editar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.046"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/BorrarEmpleado"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:backgroundTint="#F44336"
+        android:text="@string/button_borrar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.102"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/EstadoEmpleado"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:backgroundTint="#FFC107"
+        android:text="@string/button_activar"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.158"
+        tools:ignore="TouchTargetSizeCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
