--- a/app/src/main/res/layout/activity_liquidacion_por_dias.xml
+++ b/app/src/main/res/layout/activity_liquidacion_por_dias.xml
@@ -44,8 +44,8 @@
 
     <EditText
         android:id="@+id/diasTrabajados"
-        android:layout_width="167dp"
-        android:layout_height="48dp"
+        android:layout_width="170dp"
+        android:layout_height="40dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/edittext_dias_defecto"
@@ -53,16 +53,16 @@
         android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.563"
+        app:layout_constraintVertical_bias="0.641"
         tools:ignore="SpUsage,SpeakableTextPresentCheck,TextSizeCheck" />
 
     <Button
         android:id="@+id/fechaFinal"
         android:layout_width="170dp"
-        android:layout_height="48dp"
+        android:layout_height="40dp"
         android:backgroundTint="@color/white"
         android:onClick="abrirCalendario"
         android:text="@string/button_fecha_defecto"
@@ -70,15 +70,15 @@
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.933"
+        app:layout_constraintHorizontal_bias="0.937"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.363" />
+        app:layout_constraintVertical_bias="0.415" />
 
     <Button
         android:id="@+id/fechaIngreso"
         android:layout_width="170dp"
-        android:layout_height="48dp"
+        android:layout_height="40dp"
         android:backgroundTint="@color/white"
         android:onClick="abrirCalendario"
         android:text="@string/button_fecha_defecto"
@@ -89,84 +89,67 @@
         app:layout_constraintHorizontal_bias="0.933"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.273"
+        app:layout_constraintVertical_bias="0.309"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
     <TextView
-        android:id="@+id/riesgoLaboral"
-        android:layout_width="172dp"
-        android:layout_height="85dp"
-        android:paddingStart="10dp"
-        android:text="@string/label_clase_dias"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.795"
-        tools:ignore="HardcodedText,RtlSymmetry,TextSizeCheck" />
-
-    <TextView
         android:id="@+id/auxilioTransporte"
-        android:layout_width="172dp"
+        android:layout_width="170dp"
         android:layout_height="57dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:textColor="@color/black"
+        android:gravity="center"
         android:text="@string/label_auxilio_transporte_dias"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.658"
+        app:layout_constraintVertical_bias="0.755"
         tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />
 
     <TextView
         android:id="@+id/salarioIngresado"
-        android:layout_width="172dp"
+        android:layout_width="169dp"
         android:layout_height="57dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
+        android:gravity="center"
         android:text="@string/label_salario"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.458"
+        app:layout_constraintVertical_bias="0.533"
         tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />
 
     <TextView
         android:id="@+id/fechaFinalizacion"
-        android:layout_width="172dp"
+        android:layout_width="169dp"
         android:layout_height="57dp"
-        android:paddingLeft="10dp"
+        android:gravity="center"
         android:text="@string/label_fecha_final_liquidar"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.36"
+        app:layout_constraintVertical_bias="0.423"
         tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />
 
     <TextView
         android:id="@+id/FechaIngreso"
-        android:layout_width="172dp"
+        android:layout_width="169dp"
         android:layout_height="57dp"
         android:gravity="center"
         android:text="@string/label_fecha_inicio_liquidar"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.264"
+        app:layout_constraintVertical_bias="0.315"
         tools:ignore="HardcodedText,TextSizeCheck" />
 
     <Button
@@ -221,18 +204,18 @@
 
     <TextView
         android:id="@+id/diasLaboradosSemana"
-        android:layout_width="172dp"
+        android:layout_width="169dp"
         android:layout_height="57dp"
-        android:paddingLeft="10dp"
         android:paddingTop="10dp"
+        android:paddingLeft="10dp"
         android:text="@string/label_dias_laborados_semana"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.557"
+        app:layout_constraintVertical_bias="0.649"
         tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />
 
     <CheckBox
@@ -242,10 +225,10 @@
         android:text="Si"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.69"
+        app:layout_constraintHorizontal_bias="0.664"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.649"
+        app:layout_constraintVertical_bias="0.725"
         tools:ignore="HardcodedText,TouchTargetSizeCheck,TextSizeCheck" />
 
     <CheckBox
@@ -256,16 +239,16 @@
         android:text="No"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.883"
+        app:layout_constraintHorizontal_bias="0.892"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.651"
+        app:layout_constraintVertical_bias="0.727"
         tools:ignore="HardcodedText,TouchTargetSizeCheck,TextSizeCheck" />
 
     <EditText
         android:id="@+id/salarioDiario"
-        android:layout_width="166dp"
-        android:layout_height="48dp"
+        android:layout_width="170dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:hint="@string/edittext_salario_diario_defecto"
         android:importantForAutofill="no"
@@ -273,24 +256,24 @@
         android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.46"
+        app:layout_constraintVertical_bias="0.525"
         tools:ignore="SpUsage,TextContrastCheck,TextSizeCheck" />
 
     <Spinner
         android:id="@+id/lista_por_dias"
-        android:layout_width="127dp"
+        android:layout_width="291dp"
         android:layout_height="25dp"
-        android:textSize="14dp"
         android:backgroundTint="@color/white"
+        android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.133"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.738"
+        app:layout_constraintVertical_bias="0.241"
         tools:ignore="SpUsage,TextSizeCheck,TouchTargetSizeCheck" />
 
     <TextView
@@ -322,7 +305,7 @@
         app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.833"
+        app:layout_constraintVertical_bias="0.843"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
@@ -335,10 +318,10 @@
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.550"
+        app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.834"
+        app:layout_constraintVertical_bias="0.845"
         tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
